style.css
@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

body {
    box-sizing: border-box;
    background-color: #EEF9BF;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.top {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
}

.header {
    display: flex;
    text-align: center;
    justify-content: center;
    margin-top: 40px;
    font-family: "Roboto", sans-serif;
    width: 100vw;
    height: 63px;
}

.game-title {
    color: #75B79E;
    font-size: 56px;
    font-weight: 700;
    text-shadow: -3px 1px 2px grey;
}

.site {
    max-width: 900px;
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
}

.container {
    margin-top: 150px;
    display: flex;
    flex-wrap: wrap;
    gap: 34px;
    align-items: center;
    justify-content: center;
    margin-left: 122px;
    margin-right: 116px;
 
}

.card {
    position: relative;
    min-width: 117px;
    height: 146px;
    background-color: #A7E9AF;
    border-radius: 5px;
    border: 1px solid #99CEA8;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all .2s;
    transform-style: preserve-3d
}

.card:hover {
    height: 160px;
    width: 120px;
    cursor: pointer;
}

.front, .verse {
    position: absolute;
    backface-visibility: hidden;
}

.verse {
    transform: rotateY(180deg);
}

.turn {
    transform: rotateY(180deg);
}

img {
    width: 100px;
    height: 100px;
}

.replay {
    margin-top: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.configButtom {
    background-color: rgb(17, 218, 17);
    width: 300px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Roboto", sans-serif;
    font-size: 30px;
    border: 2px solid lightgrey;
    border-radius: 20px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
}

.configButtom:hover {
    cursor: pointer;
}

.hidden {
    display: none;
}

@media (max-width: 335px) {
    .game-title {
        font-size: 36px;
    }
}

